--- a/src/WidgetsTest.html
+++ b/src/WidgetsTest.html
@@ -258,6 +258,16 @@
     文字提示<br>
     <span onmouseenter="ShowTip('Tip1',event);" onmouseout="HideTip('Tip1');">显示提示</span>
     <div class="Tips" id="Tip1" data-isOpen="false">这是一条提示<br>:-)</div>
+    <br>
+    导航栏<br>
+    <div id="Nav1" class="NavBar" data-currentSel="1" data-Total="4">
+        <style onload="NavBar('Nav1');"></style>
+        <div class="NavBtn">按钮1</div>
+        <div class="NavBtn">按钮2</div>
+        <div class="NavBtn">按钮3</div>
+        <div class="NavBtn">按钮4</div>
+    </div>
+    <br>
 </body>
 
 </html>
